--- a/gui/gui.csproj
+++ b/gui/gui.csproj
@@ -53,6 +53,15 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TrucoUserController.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="TrucoUserController.Designer.cs">
+      <DependentUpon>TrucoUserController.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -62,6 +71,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="TrucoUserController.resx">
+      <DependentUpon>TrucoUserController.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -84,6 +96,45 @@
       <Project>{57807fef-469e-4477-895f-25365a6a3196}</Project>
       <Name>bll</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="img\10c.jpg" />
+    <Content Include="img\10e.jpg" />
+    <Content Include="img\10o.jpg" />
+    <Content Include="img\11b.jpg" />
+    <Content Include="img\11c.jpg" />
+    <Content Include="img\11e.jpg" />
+    <Content Include="img\11o.jpg" />
+    <Content Include="img\12b.jpg" />
+    <Content Include="img\12c.jpg" />
+    <Content Include="img\12e.jpg" />
+    <Content Include="img\12o.jpg" />
+    <Content Include="img\1b.png" />
+    <Content Include="img\1c.jpg" />
+    <Content Include="img\1e.jpg" />
+    <Content Include="img\1o.jpg" />
+    <Content Include="img\2b.jpg" />
+    <Content Include="img\2c.jpg" />
+    <Content Include="img\2e.jpg" />
+    <Content Include="img\2o.jpg" />
+    <Content Include="img\3b.jpg" />
+    <Content Include="img\3c.jpg" />
+    <Content Include="img\3e.jpg" />
+    <Content Include="img\3o.jpg" />
+    <Content Include="img\4b.jpg" />
+    <Content Include="img\4c.jpg" />
+    <Content Include="img\4e.jpg" />
+    <Content Include="img\4o.jpg" />
+    <Content Include="img\5b.jpg" />
+    <Content Include="img\5c.jpg" />
+    <Content Include="img\5e.htm" />
+    <Content Include="img\5o.jpg" />
+    <Content Include="img\6b.jpg" />
+    <Content Include="img\6c.jpg" />
+    <Content Include="img\6e.jpg" />
+    <Content Include="img\6o.jpg" />
+    <Content Include="img\7e.jpg" />
+    <Content Include="img\7o.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
