--- a/be/be.csproj
+++ b/be/be.csproj
@@ -41,6 +41,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Carta.cs" />
+    <Compile Include="FaltaEnvido.cs" />
+    <Compile Include="ITruco.cs" />
     <Compile Include="RealEnvido.cs" />
     <Compile Include="Envido.cs" />
     <Compile Include="IEnvido.cs" />
@@ -49,9 +51,11 @@
     <Compile Include="Mazo.cs" />
     <Compile Include="Partida.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReTruco.cs" />
     <Compile Include="Ronda.cs" />
     <Compile Include="Truco.cs" />
     <Compile Include="Turno.cs" />
+    <Compile Include="ValeCuatro.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
